--- a/style/web/components/menu/_var.less
+++ b/style/web/components/menu/_var.less
@@ -66,6 +66,7 @@
 // head menu
 @head-menu-item-width: 104px;
 @head-menu-item-height: 40px;
+@head-menu-submenu-border-color: @gray-color-3;
 
 // default menu
 @default-menu-width: 232px;
